syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.transaction.grpc";
option java_outer_classname = "TransactionProto";

package aurigraph.v11.transaction;

import "google/protobuf/timestamp.proto";

// Transaction Processing gRPC Service
service TransactionService {
  // Single Transaction Operations
  rpc SubmitTransaction(TransactionSubmission) returns (TransactionReceipt);
  rpc ValidateTransaction(TransactionValidation) returns (ValidationResult);
  rpc ExecuteTransaction(TransactionExecution) returns (ExecutionResult);

  // Batch Operations
  rpc SubmitBatch(BatchSubmission) returns (BatchReceipt);
  rpc ValidateBatch(BatchValidation) returns (BatchValidationResult);
  rpc ExecuteBatch(BatchExecution) returns (BatchExecutionResult);

  // Query Operations
  rpc GetTransactionDetails(TransactionDetailsQuery) returns (TransactionDetails);
  rpc GetTransactionHistory(TransactionHistoryQuery) returns (TransactionHistory);
  rpc SearchTransactions(TransactionSearchQuery) returns (TransactionSearchResult);

  // Pool Operations
  rpc GetPendingTransactions(PendingTransactionsQuery) returns (PendingTransactionsResponse);
  rpc GetPoolStatistics(PoolStatisticsQuery) returns (PoolStatistics);

  // Streaming Operations
  rpc StreamTransactionPool(PoolStreamRequest) returns (stream TransactionPoolUpdate);
  rpc StreamExecutionResults(ExecutionStreamRequest) returns (stream ExecutionResult);
}

// Transaction Submission
message TransactionSubmission {
  string transaction_id = 1;
  TransactionType transaction_type = 2;
  string from_address = 3;
  string to_address = 4;
  uint64 value = 5;
  uint64 gas_limit = 6;
  uint64 gas_price = 7;
  uint64 nonce = 8;
  bytes data = 9;
  bytes signature = 10;
  google.protobuf.Timestamp submitted_at = 11;
  map<string, string> metadata = 12;
}

// Transaction Type
enum TransactionType {
  TX_UNKNOWN = 0;
  TX_TRANSFER = 1;
  TX_CONTRACT_CALL = 2;
  TX_CONTRACT_DEPLOY = 3;
  TX_STAKE = 4;
  TX_UNSTAKE = 5;
  TX_GOVERNANCE = 6;
  TX_CROSS_CHAIN = 7;
}

// Transaction Receipt
message TransactionReceipt {
  bool success = 1;
  string transaction_id = 2;
  string transaction_hash = 3;
  uint64 block_number = 4;
  uint32 transaction_index = 5;
  TransactionStatus status = 6;
  uint64 gas_used = 7;
  string error_message = 8;
  google.protobuf.Timestamp processed_at = 9;
  repeated EventLog event_logs = 10;
}

// Transaction Status
enum TransactionStatus {
  TX_STATUS_UNKNOWN = 0;
  TX_STATUS_PENDING = 1;
  TX_STATUS_VALIDATING = 2;
  TX_STATUS_QUEUED = 3;
  TX_STATUS_EXECUTING = 4;
  TX_STATUS_SUCCESS = 5;
  TX_STATUS_FAILED = 6;
  TX_STATUS_REJECTED = 7;
  TX_STATUS_TIMEOUT = 8;
}

// Event Log
message EventLog {
  string event_name = 1;
  string contract_address = 2;
  repeated string topics = 3;
  bytes data = 4;
  uint32 log_index = 5;
}

// Transaction Validation
message TransactionValidation {
  string transaction_id = 1;
  bytes raw_transaction = 2;
  bool check_signature = 3;
  bool check_balance = 4;
  bool check_nonce = 5;
  bool check_gas = 6;
}

// Validation Result
message ValidationResult {
  bool valid = 1;
  string transaction_id = 2;
  repeated ValidationError errors = 3;
  repeated ValidationWarning warnings = 4;
  ValidationScore score = 5;
  google.protobuf.Timestamp validated_at = 6;
}

// Validation Error
message ValidationError {
  ValidationErrorType error_type = 1;
  string error_message = 2;
  string field_name = 3;
  string suggested_fix = 4;
}

// Validation Error Type
enum ValidationErrorType {
  ERROR_UNKNOWN = 0;
  ERROR_INVALID_SIGNATURE = 1;
  ERROR_INSUFFICIENT_BALANCE = 2;
  ERROR_INVALID_NONCE = 3;
  ERROR_INSUFFICIENT_GAS = 4;
  ERROR_INVALID_FORMAT = 5;
  ERROR_EXPIRED_TRANSACTION = 6;
  ERROR_REPLAY_ATTACK = 7;
}

// Validation Warning
message ValidationWarning {
  string warning_message = 1;
  WarningLevel level = 2;
}

// Warning Level
enum WarningLevel {
  WARNING_INFO = 0;
  WARNING_LOW = 1;
  WARNING_MEDIUM = 2;
  WARNING_HIGH = 3;
}

// Validation Score
message ValidationScore {
  double overall_score = 1;
  double signature_score = 2;
  double balance_score = 3;
  double nonce_score = 4;
  double gas_score = 5;
}

// Transaction Execution
message TransactionExecution {
  string transaction_id = 1;
  bytes transaction_data = 2;
  ExecutionContext context = 3;
  ExecutionOptions options = 4;
}

// Execution Context
message ExecutionContext {
  uint64 block_number = 1;
  google.protobuf.Timestamp block_timestamp = 2;
  string block_hash = 3;
  string coinbase = 4;
  uint64 gas_limit = 5;
  uint64 chain_id = 6;
}

// Execution Options
message ExecutionOptions {
  bool dry_run = 1;
  bool trace_execution = 2;
  uint32 timeout_ms = 3;
  uint64 gas_limit_override = 4;
}

// Execution Result
message ExecutionResult {
  bool success = 1;
  string transaction_id = 2;
  bytes return_data = 3;
  uint64 gas_used = 4;
  repeated StateChange state_changes = 5;
  repeated EventLog events = 6;
  string error_message = 7;
  ExecutionTrace trace = 8;
  google.protobuf.Timestamp executed_at = 9;
}

// State Change
message StateChange {
  string address = 1;
  string storage_key = 2;
  bytes old_value = 3;
  bytes new_value = 4;
}

// Execution Trace
message ExecutionTrace {
  repeated TraceStep steps = 1;
  uint64 total_steps = 2;
  uint64 total_gas = 3;
}

// Trace Step
message TraceStep {
  uint32 step_number = 1;
  string operation = 2;
  uint64 gas_cost = 3;
  uint64 remaining_gas = 4;
  bytes stack_snapshot = 5;
  bytes memory_snapshot = 6;
}

// Batch Submission
message BatchSubmission {
  repeated TransactionSubmission transactions = 1;
  bool parallel_execution = 2;
  uint32 batch_size = 3;
  uint32 priority = 4;
  google.protobuf.Timestamp submitted_at = 5;
}

// Batch Receipt
message BatchReceipt {
  bool success = 1;
  string batch_id = 2;
  uint32 total_transactions = 3;
  uint32 successful_transactions = 4;
  uint32 failed_transactions = 5;
  repeated TransactionReceipt receipts = 6;
  uint64 total_gas_used = 7;
  uint64 processing_time_ms = 8;
  google.protobuf.Timestamp processed_at = 9;
}

// Batch Validation
message BatchValidation {
  repeated TransactionValidation validations = 1;
  bool stop_on_first_error = 2;
}

// Batch Validation Result
message BatchValidationResult {
  bool all_valid = 1;
  uint32 total_validated = 2;
  uint32 valid_count = 3;
  uint32 invalid_count = 4;
  repeated ValidationResult results = 5;
  google.protobuf.Timestamp validated_at = 6;
}

// Batch Execution
message BatchExecution {
  repeated TransactionExecution executions = 1;
  bool parallel_execution = 2;
  bool stop_on_first_failure = 3;
  ExecutionContext context = 4;
}

// Batch Execution Result
message BatchExecutionResult {
  bool all_successful = 1;
  uint32 total_executed = 2;
  uint32 successful_count = 3;
  uint32 failed_count = 4;
  repeated ExecutionResult results = 5;
  uint64 total_gas_used = 6;
  uint64 total_execution_time_ms = 7;
  double throughput_tps = 8;
}

// Transaction Details Query
message TransactionDetailsQuery {
  string transaction_id = 1;
  string transaction_hash = 2;
  bool include_receipt = 3;
  bool include_execution_trace = 4;
}

// Transaction Details
message TransactionDetails {
  string transaction_id = 1;
  string transaction_hash = 2;
  TransactionSubmission submission = 3;
  TransactionReceipt receipt = 4;
  ExecutionResult execution = 5;
  TransactionMetadata metadata = 6;
}

// Transaction Metadata
message TransactionMetadata {
  google.protobuf.Timestamp submitted_at = 1;
  google.protobuf.Timestamp validated_at = 2;
  google.protobuf.Timestamp executed_at = 3;
  google.protobuf.Timestamp confirmed_at = 4;
  uint32 confirmations = 5;
  string pool_status = 6;
}

// Transaction History Query
message TransactionHistoryQuery {
  string address = 1;
  uint64 start_block = 2;
  uint64 end_block = 3;
  uint32 limit = 4;
  uint32 offset = 5;
}

// Transaction History
message TransactionHistory {
  string address = 1;
  uint32 total_transactions = 2;
  repeated TransactionDetails transactions = 3;
  bool has_more = 4;
}

// Transaction Search Query
message TransactionSearchQuery {
  string from_address = 1;
  string to_address = 2;
  TransactionType transaction_type = 3;
  TransactionStatus status = 4;
  uint64 min_value = 5;
  uint64 max_value = 6;
  google.protobuf.Timestamp start_time = 7;
  google.protobuf.Timestamp end_time = 8;
  uint32 limit = 9;
}

// Transaction Search Result
message TransactionSearchResult {
  uint32 total_matches = 2;
  repeated TransactionDetails transactions = 3;
  bool has_more = 4;
}

// Pending Transactions Query
message PendingTransactionsQuery {
  uint32 limit = 1;
  bool sort_by_gas_price = 2;
  bool sort_by_nonce = 3;
}

// Pending Transactions Response
message PendingTransactionsResponse {
  uint32 total_pending = 1;
  repeated TransactionSubmission transactions = 2;
  map<string, uint32> address_counts = 3;
}

// Pool Statistics Query
message PoolStatisticsQuery {
  bool include_detailed_stats = 1;
}

// Pool Statistics
message PoolStatistics {
  uint32 total_pending = 1;
  uint32 total_queued = 2;
  uint32 total_validating = 3;
  uint64 total_gas_pending = 4;
  double average_gas_price = 5;
  double pool_usage_percent = 6;
  map<string, uint32> status_distribution = 7;
}

// Pool Stream Request
message PoolStreamRequest {
  repeated TransactionStatus status_filter = 1;
  uint32 buffer_size = 2;
}

// Transaction Pool Update
message TransactionPoolUpdate {
  UpdateType update_type = 1;
  TransactionSubmission transaction = 2;
  TransactionStatus old_status = 3;
  TransactionStatus new_status = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// Update Type
enum UpdateType {
  UPDATE_UNKNOWN = 0;
  UPDATE_ADDED = 1;
  UPDATE_REMOVED = 2;
  UPDATE_STATUS_CHANGED = 3;
}

// Execution Stream Request
message ExecutionStreamRequest {
  repeated string transaction_ids = 1;
  bool include_trace = 2;
}
