package io.aurigraph.v11.grpc;

import io.quarkus.grpc.GrpcService;
import io.smallrye.mutiny.Multi;
import io.smallrye.mutiny.Uni;
import io.aurigraph.v11.proto.*;
import java.time.Instant;
import java.util.*;
import java.util.concurrent.*;
import java.util.concurrent.atomic.AtomicLong;
import com.google.protobuf.Timestamp;

/**
 * TransactionServiceImpl - High-Performance Transaction Processing Service
 *
 * Implements 12 RPC methods for blockchain transaction processing with:
 * - Single and batch transaction submission
 * - Status tracking and receipt retrieval
 * - Gas estimation and signature validation
 * - Transaction history queries
 * - Real-time event streaming
 *
 * Target Performance: 1.1M-1.3M TPS (50-70% improvement from 776K baseline)
 * Protocol: gRPC with Protocol Buffers and HTTP/2 multiplexing
 */
@GrpcService
public class TransactionServiceImpl implements TransactionService {

    private final Map<String, Transaction> transactionCache = new ConcurrentHashMap<>();
    private final Queue<Transaction> pendingTransactions = new ConcurrentLinkedQueue<>();
    private final Map<String, TransactionReceipt> receiptCache = new ConcurrentHashMap<>();
    private final AtomicLong totalTransactions = new AtomicLong(0);
    private final AtomicLong confirmedTransactions = new AtomicLong(0);
    private final AtomicLong failedTransactions = new AtomicLong(0);

    private volatile double averageGasPrice = 20.0;
    private volatile double minGasPrice = 1.0;
    private volatile double maxGasPrice = 500.0;

    @Override
    public Uni<TransactionSubmissionResponse> submitTransaction(SubmitTransactionRequest request) {
        return Uni.createFrom().item(() -> {
            try {
                Transaction tx = request.getTransaction();
                String txHash = generateTxHash(tx);

                Transaction storedTx = tx.toBuilder()
                    .setTransactionHash(txHash)
                    .setStatus(TransactionStatus.TRANSACTION_QUEUED)
                    .setCreatedAt(getCurrentTimestamp())
                    .build();

                transactionCache.put(txHash, storedTx);
                pendingTransactions.offer(storedTx);
                totalTransactions.incrementAndGet();

                return TransactionSubmissionResponse.newBuilder()
                    .setTransactionHash(txHash)
                    .setStatus(TransactionStatus.TRANSACTION_QUEUED)
                    .setTimestamp(getCurrentTimestamp())
                    .setMessage("Transaction queued for processing")
                    .build();
            } catch (Exception e) {
                return TransactionSubmissionResponse.newBuilder()
                    .setStatus(TransactionStatus.TRANSACTION_FAILED)
                    .setTimestamp(getCurrentTimestamp())
                    .setMessage("Submission failed: " + e.getMessage())
                    .build();
            }
        });
    }

    @Override
    public Uni<BatchTransactionSubmissionResponse> batchSubmitTransactions(BatchTransactionSubmissionRequest request) {
        return Uni.createFrom().item(() -> {
            List<TransactionSubmissionResponse> responses = new ArrayList<>();
            int acceptedCount = 0;
            int rejectedCount = 0;

            for (Transaction tx : request.getTransactionsList()) {
                try {
                    String txHash = generateTxHash(tx);
                    Transaction storedTx = tx.toBuilder()
                        .setTransactionHash(txHash)
                        .setStatus(TransactionStatus.TRANSACTION_QUEUED)
                        .setCreatedAt(getCurrentTimestamp())
                        .build();

                    transactionCache.put(txHash, storedTx);
                    pendingTransactions.offer(storedTx);
                    totalTransactions.incrementAndGet();
                    acceptedCount++;

                    responses.add(TransactionSubmissionResponse.newBuilder()
                        .setTransactionHash(txHash)
                        .setStatus(TransactionStatus.TRANSACTION_QUEUED)
                        .setTimestamp(getCurrentTimestamp())
                        .build());
                } catch (Exception e) {
                    rejectedCount++;
                    responses.add(TransactionSubmissionResponse.newBuilder()
                        .setStatus(TransactionStatus.TRANSACTION_FAILED)
                        .setTimestamp(getCurrentTimestamp())
                        .build());
                }
            }

            return BatchTransactionSubmissionResponse.newBuilder()
                .addAllResponses(responses)
                .setAcceptedCount(acceptedCount)
                .setRejectedCount(rejectedCount)
                .setBatchId(request.getBatchId())
                .setTimestamp(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Uni<TransactionStatusResponse> getTransactionStatus(GetTransactionStatusRequest request) {
        return Uni.createFrom().item(() -> {
            String txHash = request.getTransactionHash();

            if (txHash == null || txHash.isEmpty()) {
                txHash = request.getTransactionId();
            }

            Transaction tx = transactionCache.get(txHash);
            if (tx == null) {
                return TransactionStatusResponse.newBuilder()
                    .setStatus(TransactionStatus.TRANSACTION_UNKNOWN)
                    .setTimestamp(getCurrentTimestamp())
                    .build();
            }

            TransactionStatusResponse.Builder response = TransactionStatusResponse.newBuilder()
                .setTransaction(tx)
                .setStatus(tx.getStatus())
                .setTimestamp(getCurrentTimestamp());

            TransactionReceipt receipt = receiptCache.get(txHash);
            if (receipt != null) {
                response.setConfirmations(1)
                    .setContainingBlockHash(receipt.getBlockHash())
                    .setContainingBlockHeight(receipt.getBlockHeight());
            }

            return response.build();
        });
    }

    @Override
    public Uni<TransactionReceipt> getTransactionReceipt(GetTransactionStatusRequest request) {
        return Uni.createFrom().item(() -> {
            String txHash = request.getTransactionHash();
            TransactionReceipt receipt = receiptCache.get(txHash);

            if (receipt != null) {
                return receipt;
            }

            return TransactionReceipt.newBuilder()
                .setTransactionHash(txHash)
                .setStatus(TransactionStatus.TRANSACTION_UNKNOWN)
                .setExecutionTime(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Uni<CancelTransactionResponse> cancelTransaction(CancelTransactionRequest request) {
        return Uni.createFrom().item(() -> {
            String txHash = request.getTransactionHash();
            Transaction tx = transactionCache.get(txHash);

            if (tx == null || tx.getStatus() != TransactionStatus.TRANSACTION_QUEUED) {
                return CancelTransactionResponse.newBuilder()
                    .setTransactionHash(txHash)
                    .setCancellationSuccessful(false)
                    .setReason("Transaction not pending")
                    .setTimestamp(getCurrentTimestamp())
                    .build();
            }

            Transaction cancelled = tx.toBuilder()
                .setStatus(TransactionStatus.TRANSACTION_FAILED)
                .build();
            transactionCache.put(txHash, cancelled);
            failedTransactions.incrementAndGet();

            return CancelTransactionResponse.newBuilder()
                .setTransactionHash(txHash)
                .setCancellationSuccessful(true)
                .setReason("Cancelled by request")
                .setTimestamp(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Uni<ResendTransactionResponse> resendTransaction(ResendTransactionRequest request) {
        return Uni.createFrom().item(() -> {
            String originalHash = request.getOriginalTransactionHash();
            Transaction originalTx = transactionCache.get(originalHash);

            if (originalTx == null) {
                return ResendTransactionResponse.newBuilder()
                    .setOriginalTransactionHash(originalHash)
                    .setNewTransactionHash("")
                    .setTimestamp(getCurrentTimestamp())
                    .build();
            }

            String newHash = generateTxHash(originalTx);
            Transaction resent = originalTx.toBuilder()
                .setTransactionHash(newHash)
                .setGasPrice(request.getNewGasPrice())
                .setStatus(TransactionStatus.TRANSACTION_QUEUED)
                .setCreatedAt(getCurrentTimestamp())
                .build();

            transactionCache.put(newHash, resent);
            pendingTransactions.offer(resent);
            totalTransactions.incrementAndGet();

            return ResendTransactionResponse.newBuilder()
                .setOriginalTransactionHash(originalHash)
                .setNewTransactionHash(newHash)
                .setNewGasPrice(request.getNewGasPrice())
                .setStatus(TransactionStatus.TRANSACTION_QUEUED)
                .setTimestamp(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Uni<GasEstimate> estimateGasCost(EstimateGasCostRequest request) {
        return Uni.createFrom().item(() -> {
            int dataLength = request.getData().length();
            double estimatedGas = 21000.0 + (dataLength * 16.0);
            double totalCost = estimatedGas * averageGasPrice;

            return GasEstimate.newBuilder()
                .setEstimatedGas(estimatedGas)
                .setGasPriceWei(averageGasPrice)
                .setTotalCost(String.valueOf(totalCost))
                .setBufferPercent(10.0)
                .setRecommendation("Gas estimate: " + estimatedGas)
                .setTimestamp(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Uni<TransactionSignatureValidationResult> validateTransactionSignature(
            ValidateTransactionSignatureRequest request) {
        return Uni.createFrom().item(() -> {
            Transaction tx = request.getTransaction();

            TransactionSignatureValidationResult.Builder result = TransactionSignatureValidationResult.newBuilder()
                .setSignatureValid(!tx.getSignature().isEmpty())
                .setSenderValid(!tx.getPublicKey().isEmpty())
                .setNonceValid(tx.getNonce() >= 0)
                .setTimestamp(getCurrentTimestamp());

            return result.build();
        });
    }

    @Override
    public Uni<PendingTransactionsResponse> getPendingTransactions(GetPendingTransactionsRequest request) {
        return Uni.createFrom().item(() -> {
            List<Transaction> pending = new ArrayList<>(pendingTransactions);

            if (request.getFilterAddress() != null && !request.getFilterAddress().isEmpty()) {
                pending = pending.stream()
                    .filter(tx -> tx.getFromAddress().equals(request.getFilterAddress()) ||
                                  tx.getToAddress().equals(request.getFilterAddress()))
                    .limit(request.getLimit() > 0 ? request.getLimit() : 100)
                    .toList();
            }

            double avgGas = pending.stream()
                .mapToDouble(Transaction::getGasPrice)
                .average()
                .orElse(averageGasPrice);

            return PendingTransactionsResponse.newBuilder()
                .addAllTransactions(pending)
                .setTotalPending(pending.size())
                .setAverageGasPrice(avgGas)
                .setQueryTime(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Uni<TransactionHistoryResponse> getTransactionHistory(GetTransactionHistoryRequest request) {
        return Uni.createFrom().item(() -> {
            String address = request.getAddress();
            List<Transaction> history = transactionCache.values().stream()
                .filter(tx -> tx.getFromAddress().equals(address) || tx.getToAddress().equals(address))
                .skip(request.getOffset())
                .limit(request.getLimit() > 0 ? request.getLimit() : 50)
                .toList();

            return TransactionHistoryResponse.newBuilder()
                .addAllTransactions(history)
                .setTotalCount((int) transactionCache.values().stream()
                    .filter(tx -> tx.getFromAddress().equals(address) || tx.getToAddress().equals(address))
                    .count())
                .setReturnedCount(history.size())
                .setOffset(request.getOffset())
                .setQueryTime(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Uni<TxPoolStatistics> getTxPoolSize(GetTxPoolSizeRequest request) {
        return Uni.createFrom().item(() -> {
            double avgGasPrice = transactionCache.values().stream()
                .mapToDouble(Transaction::getGasPrice)
                .average()
                .orElse(averageGasPrice);

            long poolSize = transactionCache.values().stream()
                .mapToLong(tx -> tx.getData().length() + tx.getSignature().length())
                .sum();

            double utilization = (pendingTransactions.size() / 10000.0) * 100.0;

            return TxPoolStatistics.newBuilder()
                .setTotalPending(pendingTransactions.size())
                .setTotalQueued(transactionCache.size())
                .setAverageGasPrice(avgGasPrice)
                .setMinGasPrice(minGasPrice)
                .setMaxGasPrice(maxGasPrice)
                .setTotalPoolSizeBytes(poolSize)
                .setPoolUtilizationPercent(utilization)
                .setTimestamp(getCurrentTimestamp())
                .build();
        });
    }

    @Override
    public Multi<TransactionEvent> streamTransactionEvents(StreamTransactionEventsRequest request) {
        return Multi.createFrom().ticks().every(java.time.Duration.ofMillis(100))
            .onItem().transform(i -> {
                Transaction tx = pendingTransactions.poll();
                if (tx != null) {
                    Transaction confirmed = tx.toBuilder()
                        .setStatus(TransactionStatus.TRANSACTION_CONFIRMED)
                        .setExecutedAt(getCurrentTimestamp())
                        .build();

                    transactionCache.put(tx.getTransactionHash(), confirmed);
                    confirmedTransactions.incrementAndGet();

                    return TransactionEvent.newBuilder()
                        .setTransaction(confirmed)
                        .setStatus(TransactionStatus.TRANSACTION_CONFIRMED)
                        .setEventType("CONFIRMED")
                        .setStreamId(UUID.randomUUID().toString())
                        .setEventSequence(totalTransactions.get())
                        .setTimestamp(getCurrentTimestamp())
                        .build();
                } else {
                    return TransactionEvent.newBuilder()
                        .setStatus(TransactionStatus.TRANSACTION_UNKNOWN)
                        .setEventType("HEARTBEAT")
                        .setStreamId(UUID.randomUUID().toString())
                        .setTimestamp(getCurrentTimestamp())
                        .build();
                }
            })
            .ifNoItem().after(java.time.Duration.ofSeconds(300))
            .complete();
    }

    private String generateTxHash(Transaction tx) {
        return "0x" + Integer.toHexString(Objects.hash(
            tx.getFromAddress(), tx.getToAddress(), tx.getAmount(), System.nanoTime()
        )).substring(0, 8);
    }

    private Timestamp getCurrentTimestamp() {
        long now = System.currentTimeMillis();
        return Timestamp.newBuilder()
            .setSeconds(now / 1000)
            .setNanos((int) ((now % 1000) * 1_000_000))
            .build();
    }
}
